<resources>
    <string name="app_name">Go Finance</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2087818790993613/6234749686</string>
    <string name="insertial_ad_unit_id" translatable="false">ca-app-pub-2087818790993613/9048615288</string>
    <string name="categories">Categories</string>
    <string name="quiz">Quiz</string>
    <string name="stockWatch">Stock Watch</string>
    <string name="loanCalc">Loan Calculator</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="favourites">Favourites</string>
    <string name="calculator">Calculator</string>
    <string name="all">All</string>
    <string name="main">Main</string>

    <!--Settings-->
    <string name="notifications">Notifications</string>
    <string name="notify_daily_term">Notify me daily terms</string>
    <string name="notify_new_version">Notify me about newer versions</string>
    <string name="choose_speech_language">Choose speech language</string>
    <string name="english_us">English US</string>
    <string name="english_uk">English UK</string>
    <string name="social">Social</string>
    <string name="share">Share</string>
    <string name="rate">Please rate us</string>
    <string name="sharing_txt">Hey! Check out my app, it will help you out https://play.google.com/store/apps/details?id=com.nakhmedov.finance</string>
    <string name="invitation_title">Go Finance Invite</string>
    <string name="invitation_message">Please join us Go Finance</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invite">Invite</string>

    <!--App Update-->
    <string name="new_version_available">New version is available!\nPlease update.</string>
    <string name="dont_check">Don\'t check for updates</string>
    <string name="update">Update</string>
    <string name="action_cancel">Cancel</string>

    <string name="empty">Empty</string>
    <string name="like">Like</string>
    <string name="category_sharing_txt">Here %1$s is my favourite category</string>
    <string name="definition">Definition</string>
    <string name="play">Play</string>
    <string name="smth_wrong">Ohh, something is wrong</string>
    <string name="add_favourite">Added to favourites</string>
    <string name="app_url">Go Finance https://play.google.com/store/apps/details?id=com.nakhmedov.finance</string>
    <string name="no_content_play">No content to play, please try to check internet connection</string>
    <string name="search_empty">Check whether the request is correct or specify a new one.</string>
    <string name="nothing_found">Nothing is found</string>
    <string name="cant_get_content">Could not get the content, please try to check internet.</string>
    <string name="ok">OK</string>
    <string name="converter">Converter</string>
    <string name="currencey_converter">Currency converter</string>
    <string name="amount">Amount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="new_feature">New feature</string>
    <string name="we_are_working_hard">We are working on that soon it will be available on next version.</string>
    <string name="sum">Sum = </string>
    <string name="need_enter_value">You need to enter value</string>
    <string name="check_net">Please check your internet connection.</string>
    <string name="category_update_failed">Category update is failed. Please check your internet.</string>
    <string name="term_update_failed">Terms update is failed. Please check your internet.</string>
    <string name="updating_terms">Updating new terms&#8230;</string>
    <string name="retry">RETRY</string>
    <string name="updating_categories">Updating categories</string>
    <string name="empty_starred">Your favourite terms is empty</string>
    <string name="need_faovourite_category">You can quiz yourself if only you have favourite categories.</string>
    <string name="finish_test">You have completed the test.</string>
    <string name="version">Go Finance  1.1 version</string>
    <string name="about">About</string>
    <string name="about_description">It is for people who are keen on broadening their knowledge in terms of Finance</string>
    <string name="day_term">Day Term</string>
    <string name="no_internet">No internet connection.</string>

</resources>
